Time: 3 ms (20.33%) | Memory: 45 MB (19.98%) - LeetSync